Mon, Feb 23, 2026, 10:11 AM -08:00

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     font-size: 18px;
     padding: 5px;
     background-color: white;
+    transition: width 1s ease;
 }
 
 .searchBar:focus {
