--- a/loading.css
+++ b/loading.css
@@ -3,9 +3,14 @@
 }
 
 body {
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vh;
+    margin: 0;
+}
+
+.loading-text {
+    font-size: 50px;
+    
 }
