--- a/loading.css
+++ b/loading.css
@@ -12,5 +12,17 @@ body {
 
 .loading-text {
     font-size: 50px;
-    
+    opacity: 1;
+
+}
+
+.bg {
+    width: 100vw;
+    height: 100vh;
+    background-image: url("bgPhoto.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    z-index: -1;
+    filter: blur(50px);
 }
