--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 .search {
     position: relative;
-    height: minmax(75px, 200px);
+    height: 75px;
 }
 
 .searchBar {
@@ -39,8 +39,8 @@ body {
     background-color: white;
     border: 0;
     font-size: 18px;
-    height: minmax(75px, 200px);
-    width: minmax(75px, 200px);
+    height: 75px;
+    width: 75px;
     padding: 5px;
     position: absolute;
     top: 0;
