Fri, Feb 27, 2026, 10:07 AM -08:00

--- a/expandingPage/expanding.css
+++ b/expandingPage/expanding.css
@@ -3,6 +3,16 @@
     height: 90vh;
 }
 
+.panel {
+    align-items: center;
+}
+
+.panel > h3 {
+    color: white;
+    -webkit-text-stroke: black solid 5px;
+
+}
+
 .flex {
     display: flex;
 }
