--- a/expandingPage/expanding.css
+++ b/expandingPage/expanding.css
@@ -1,11 +1,27 @@
+body {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
     width: 90vw;
     height: 90vh;
+    background-color: #333;
 }
 
 .panel {
     align-items: center;
-    image-repeat: no-repeat;
+    background-repeat: no-repeat;
+    width: 5vw;
+    transition: width ease 0.1s;
+}
+
+.panel:hover {
+    cursor: pointer;
+    width: 6vw;
 }
 
 .panel > h3 {
@@ -25,4 +41,8 @@
 
 .row {
     flex-direction: row;
+}
+
+.column {
+    flex-direction: column;
 }
