--- a/expandingPage/expanding.css
+++ b/expandingPage/expanding.css
@@ -9,19 +9,22 @@ body {
 .container {
     width: 90vw;
     height: 90vh;
-    background-color: #333;
+    background-color: grey;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .panel {
     align-items: center;
     background-repeat: no-repeat;
-    width: 5vw;
+    width: 10vw;
+    height: 80%;
     transition: width ease 0.1s;
 }
 
 .panel:hover {
     cursor: pointer;
-    width: 6vw;
+    width: 12vw;
 }
 
 .panel > h3 {
@@ -33,6 +36,11 @@ body {
 
 .selected {
     width: 40vw;
+    transition: all 1s
+}
+
+.selected:hover {
+    border: black;
 }
 
 .flex {
