--- a/expandingPage/expanding.css
+++ b/expandingPage/expanding.css
@@ -36,11 +36,11 @@ body {
 
 .selected {
     width: 40vw;
-    transition: all 1s
+    transition: all 0.1s
 }
 
 .selected:hover {
-    border: black solid 5px;
+    border: ;
 }
 
 .flex {
